--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,7 @@ features = ["sqlite", "serde_json", "numeric"]
 [dependencies.serde]
 version = "1.0"
 features = ["derive"]
+
+[dependencies.druid]
+version = "0.7.0"
+features = ["im", "svg", "image"]
