--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2018"
 dotenv = "0.15.0"
 serde_json = "1.0.64"
 anyhow = "1.0.41"
+rayon = "1.5.3"
+dashmap = "5.3.4"
 
 [dependencies.diesel]
 version = "1.4.6"
@@ -18,7 +20,3 @@ features = ["sqlite", "serde_json", "numeric"]
 [dependencies.serde]
 version = "1.0"
 features = ["derive"]
-
-[dependencies.druid]
-version = "0.7.0"
-features = ["im", "svg", "image"]
